Safari fix: Gallery was not aligned
18px of bottom margin fixes it.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -86,7 +86,7 @@ p {
 
 		img {
 			@extend .img-responsive;
-			margin-bottom: 17px;
+			margin-bottom: 18px;
 		}
 
 		.img-overlay {
